src/test/ui/tag-type-args.stderr
error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/tag-type-args.rs:3:11
   |
LL | fn foo(c: Quux) { assert!((false)); }
   |           ^^^^ expected 1 type argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
